Bug 152165 - With folding outlines, message about "read-only content" is too vague
Summary: With folding outlines, message about "read-only content" is too vague
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: Writer-Outline-Folding
  Show dependency treegraph
 
Reported: 2022-11-22 04:11 UTC by j.a.swami
Modified: 2022-11-30 12:25 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
delete selection with folded content information dialog (275.09 KB, image/png)
2022-11-23 02:19 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description j.a.swami 2022-11-22 04:11:22 UTC
Description:
When content is folded and one tries to delete it, one receives the pop-up "Write-protected content cannot be changed." But (especially if one is trying to delete more than just the folded content) one is likely to be in the dark about what "write-protected content" is being referred to or why it is "write protected." This can be frustrating.

Steps to Reproduce:
1. Turn on outline folding
2. Fold some content
3. Try to delete it

Actual Results:
Popup appears: "Read-only content," etc.

Expected Results:
I should see a popup more like this: "You are trying to delete folded (hidden) content. To delete this content, first unfold it so you can see what you intend to delete."


Reproducible: Always


User Profile Reset: No

Additional Info:
See also Bug 62879.
Comment 1 Jim Raykowski 2022-11-23 02:19:52 UTC
Created attachment 183725 [details]
delete selection with folded content information dialog

Would what is shown in the attached screenshot be ok?
Comment 2 j.a.swami 2022-11-23 04:03:31 UTC
(In reply to Jim Raykowski from comment #1)
> Created attachment 183725 [details]
> delete selection with folded content information dialog
> 
> Would what is shown in the attached screenshot be ok?

Looks good to me.
Comment 3 Jim Raykowski 2022-11-23 05:57:08 UTC
https://gerrit.libreoffice.org/c/core/+/143132
Comment 4 stragu 2022-11-23 15:41:21 UTC
Also Windows:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: deb7bc82de19ea8e20c767fdf21f9ba4feb5e9f0
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 5 Commit Notification 2022-11-24 07:10:23 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8ba1c4e27376cbd73892768d1e741067918eb897

tdf#152165 Improve the 'Read-only Content' dialog message

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 stragu 2022-11-30 12:25:31 UTC
Verified as fixed:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 01a3cc1e55034f7703219d4bbb209de7c37bf07b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Jim! :)
If you don't intend to submit more commits related to this, please feel free to self-verify as fixed.