tdf#152165 Improve the 'Read-only Content' dialog message

This patch implements user j.a.swami's suggested improvement of the
messages shown in the 'Read-only Content' dialog when trying to
delete a selection in the document that has folded content. In doing
so, repeated code to create and run the dialog at each place it is
used is replaced by a single function call.

Change-Id: If79298e0ee920e60620934f1eacc98c776e5d33e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143132
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>