sw/source/core/crsr/crsrsh.cxx
@@ -3358,31 +3358,13 @@ void SwCursorShell::SetReadOnlyAvailable( bool bFlag )
 
 bool SwCursorShell::HasReadonlySel(bool const isReplace) const
 {
+    // Treat selections that span over start or end of paragraph of an outline node
+    // with folded outline content as read-only.
     if (GetViewOptions()->IsShowOutlineContentVisibilityButton())
     {
-        // Treat selections that span over start or end of paragraph of an outline node
-        // with folded outline content as read-only.
         SwWrtShell* pWrtSh = GetDoc()->GetDocShell()->GetWrtShell();
-        if (pWrtSh)
-        {
-            for(const SwPaM& rPaM : GetCursor()->GetRingContainer())
-            {
-                SwPaM aPaM(*rPaM.GetMark(), *rPaM.GetPoint());
-                aPaM.Normalize();
-                SwNodeIndex aPointIdx(aPaM.GetPoint()->GetNode());
-                SwNodeIndex aMarkIdx(aPaM.GetMark()->GetNode());
-                if (aPointIdx == aMarkIdx)
-                    continue;
-                // If any nodes in PaM are folded outline content nodes, then set read-only.
-                SwOutlineNodes::size_type nPos;
-                for (SwNodeIndex aIdx = aPointIdx; aIdx <= aMarkIdx; aIdx++)
-                {
-                    if (GetDoc()->GetNodes().GetOutLineNds().Seek_Entry(&(aIdx.GetNode()), &nPos) &&
-                            !pWrtSh->GetAttrOutlineContentVisible(nPos))
-                        return true;
-                }
-            }
-        }
+        if (pWrtSh && pWrtSh->HasFoldedOutlineContentSelected())
+            return true;
     }
     bool bRet = false;
     // If protected area is to be ignored, then selections are never read-only.
